<resources>
    <string name="app_name">Be</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_car">carActivity</string>
    <string name="title_mrt">捷運路線圖</string>
    <string name="title_ths">高鐵時刻表</string>
    <string name="title_bus">公車時刻表</string>
    <string name="title_tra">火車時刻表</string>
    <string name="title_zoo">動物認養資訊</string>
    <string name="title_notifications">Notifications</string>
    <string-array name="mrt">
        <item>台北捷運路線圖</item>
        <item>桃園機場捷運路線圖</item>
        <item>高雄捷運路線圖</item>
    </string-array>
    <string-array name="zoo">
        <item>狗狗</item>
        <item>貓咪</item>
        <item>其他</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
</resources>
